# Chumsky-Parser

./: Cargo.toml
parser/: Cargo.toml  prompt.txt
parser/src/: ast.rs  error.rs  expression.rs  expression_parser.rs  item.rs  item_parser.rs  lexer.rs  lib.rs  parse_error.rs  parser.rs  statement_parser.rs  tests.rs  util_parsers.rs
parser/src/error/: diagnostic.rs
src/: ast.rs  compiler.rs  error.rs  expression.rs  item.rs  lexer.rs  lib.rs  main.ar  main.rs  parser.rs  plan.txt  span.rs  statement_parser.rs  tests.rs  util_parsers.rs
src/error/: emitter.rs
