[package]
name = "Chumsky_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.5"
miette = "5.5.0"

[dependencies.chumsky]
git = "https://github.com/zesterer/chumsky"
rev = "4145fcf5bf1323d1accae5d7ba50ff9b799dbe43"
features = ["label"]
