[package]
name = "Chumsky_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "parser",
]


[dependencies]
ariadne = "0.1.5"
miette = "5.5.0"
logos = "0.13.0"
colored = "2.0.0"
parser = { path = "parser" }

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
nursery = "deny"
pedantic = "deny"
