[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"

[dependencies.chumsky]
git = "https://github.com/zesterer/chumsky"
rev = "e045b140497bd07fecbe13ae1ad22aa252678de3"
features = ["label", "pratt"]

[lints.clippy]
nursery = "deny"
pedantic = "deny"
